Small corrections. Updated to avoid pull-to-refresh on Chrome and bounce effect on iOS.

--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@ html, body {
     height: 100%;
     width: 100%;
     margin: 0;
+    overscroll-behavior: none; /* Disables pull-to-refresh and overscroll/rubberband glow effects. */
+    position: fixed;
 }
 
 h1 {
